--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "ncp": "^2.0.0",
+    "slugify": "^1.4.6",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
