--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "graphql-playground-middleware-express": "^1.7.22",
     "graphql-tools": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
+    "merge-graphql-schemas": "^1.7.8",
     "mongodb": "^3.6.3",
     "ncp": "^2.0.0",
     "slugify": "^1.4.6",
@@ -61,6 +62,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.11",
+    "@types/nodemailer": "^6.4.0",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript-tslint-plugin": "^1.0.0"
