--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mongodb": "^3.6.3",
     "ncp": "^2.0.0",
     "slugify": "^1.4.6",
+    "stripe": "^8.137.0",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
