--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ncp": "^2.0.0",
     "slugify": "^1.4.6",
     "stripe": "^8.137.0",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
