--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/gareder/backend-meang-onlineshop#readme",
   "engines": {
-    "node": ">=12.0.0",
+    "node": "12.x.x",
     "npm": ">=6.0.0"
   },
   "dependencies": {
@@ -62,7 +62,7 @@
     "@types/express": "^4.17.9",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongodb": "^3.6.3",
+    "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.11",
     "@types/nodemailer": "^6.4.0",
     "nodemailer": "^6.4.17",
